// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header Component > should render the Header component correctly 1`] = `
<div>
  <div>
    <button
      data-testid="connect-test-button"
    />
  </div>
  <div
    align="start"
    class="sc-beySPh itSzAW"
    position="left"
    spacing="0"
    style="width: 100vw;"
  >
    <header
      class="sc-UFult cqMcGZ"
    >
      <img
        class="sc-jIYCZY gQerPj"
        src="/src/assets/icons/logo-dark.svg"
      />
    </header>
    <nav
      class="sc-fYlSAf jCiJym"
    >
      <a
        class="sc-dxjrPO ctqIaR"
        href="/dashboard"
      >
        Dashboard
      </a>
      <a
        class="sc-dxjrPO ctqIaR"
        href="/exchange"
      >
        Exchange
      </a>
      <a
        class="sc-dxjrPO ctqIaR"
        href="/leaderboard"
      >
        Leaderboard
      </a>
      <a
        class="sc-dxjrPO ctqIaR"
        href="/referrals"
      >
        referrals
      </a>
      <button
        class="sc-hLQSwg czlzAB"
        variant="secondary"
      >
        Add Chain
      </button>
      <span
        class="sc-eDLKkx eNpymk"
      >
        <button
          class="sc-hLQSwg exzUPs"
          variant="primary"
        >
          Connect
        </button>
      </span>
    </nav>
  </div>
  <div
    id="modal-root"
  />
</div>
`;

exports[`Header Component > should render the Nav component 1`] = `
<nav
  class="sc-fYlSAf jCiJym"
>
  <a
    class="sc-dxjrPO ctqIaR"
    href="/dashboard"
  >
    Dashboard
  </a>
  <a
    class="sc-dxjrPO ctqIaR"
    href="/exchange"
  >
    Exchange
  </a>
  <a
    class="sc-dxjrPO ctqIaR"
    href="/leaderboard"
  >
    Leaderboard
  </a>
  <a
    class="sc-dxjrPO ctqIaR"
    href="/referrals"
  >
    referrals
  </a>
  <button
    class="sc-hLQSwg czlzAB"
    variant="secondary"
  >
    Add Chain
  </button>
  <span
    class="sc-eDLKkx eNpymk"
  >
    <button
      class="sc-hLQSwg exzUPs"
      variant="primary"
    >
      Connect
    </button>
  </span>
</nav>
`;
